assignments/PA4/tests/bad/bad22.cl
class M {
    main(x:Int):Bool{1};
};
class M {
    main(x:Int):Str{1};
};

